change navbar spacing-too lazy to fix

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,85 +1,87 @@
-  html {
-    background-color: black;
-  }
-  body {
-    font-family: Verdana, sans-serif;
-    margin: 0;
-    padding-bottom: 20px;
-    background-color: rgba(0, 100, 0, 0.447);
-  }
-  header {
-    padding: 20px;
-    text-align: center;
-  }
-  .bold {
-    font-weight: bold;
-  }
-  .container {
-    padding: 0 20px 0 20px;
-    display: flex;
-    flex-direction: row;
-    /* flex-wrap: wrap; */
-    justify-content: center;
-  }
-  .teacher {
-    flex: 10%;
-    box-sizing: border-box;
-    padding-right:50px;
-  }
-  .aboutevent {
-    flex: 90%;
-    box-sizing: border-box;
-  }
-  main {
-    padding-top: 40px;
-    width: 80%;
-    margin: 0 auto;
-  }
-  h1 {
-    font-family: Georgia, sans-serif;
-    font-size: 2em;
-    color: silver;
-    font-weight: bold;
-  }
-  h2 {
-    font-family: Georgia, sans-serif;
-    font-size: 1.5em;
-    margin-bottom: 10px;
-    color: silver;
-    font-weight: unset;
-  }
-  p {
-    line-height: 1.5;
-    color: silver;
-  }
-  li{
-    color:silver;
-    margin-bottom: 5px;
-    padding-top:5px;
-  }
-  nav {
-    padding: 10px;
-    background-color: black;
-  }
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-  a {
-    text-decoration: underline;
-    color: silver;
-    padding: 0 0 0 3px;
-  }
-  nav a:hover {
-    color: #c0c0c0bf;
-  }
-  footer {
-    padding-top: 20px;
-    text-align: center;
-  }
-  
+html {
+  background-color: black;
+}
+body {
+  font-family: Verdana, sans-serif;
+  margin: 0;
+  padding-bottom: 20px;
+  background-color: rgba(0, 100, 0, 0.447);
+}
+header {
+  padding: 20px;
+  text-align: center;
+}
+.bold {
+  font-weight: bold;
+}
+.container {
+  padding: 0 20px 0 20px;
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+}
+.teacher {
+  flex: 10%;
+  box-sizing: border-box;
+  padding-right:50px;
+}
+.aboutevent {
+  flex: 90%;
+  box-sizing: border-box;
+}
+main {
+  padding-top: 40px;
+  width: 80%;
+  margin: 0 auto;
+}
+h1 {
+  font-family: Georgia, sans-serif;
+  font-size: 2em;
+  color: silver;
+  font-weight: bold;
+}
+h2 {
+  font-family: Georgia, sans-serif;
+  font-size: 1.5em;
+  margin-bottom: 10px;
+  color: silver;
+  font-weight: unset;
+}
+p {
+  line-height: 1.5;
+  color: silver;
+}
+li{
+  color:silver;
+  margin-bottom: 5px;
+  padding-top:5px;
+}
+nav {
+  padding: 10px;
+  background-color: black;
+}
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+a {
+  text-decoration: underline;
+  color: silver;
+  padding: 0 0 0 3px;
+}
+nav a:hover {
+  color: #c0c0c0bf;
+}
+footer {
+  padding-top: 20px;
+  text-align: center;
+}
+.navbar a, .navbar .dropdown{
+  padding-right: 8px;
+}
 .dropbtn {
   background-color: black;
   color: silver;
@@ -88,12 +90,10 @@
   font-size: 16px;
   border: none;
 }
-
 .dropdown {
   position: relative;
   display: inline-block;
 }
-
 .dropdown-content {
   display: none;
   position: absolute;
@@ -102,7 +102,6 @@
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
-
 .dropdown-content a {
   text-decoration: underline;
   color: silver;
@@ -110,7 +109,5 @@
   display: block;
   padding-bottom: 5px;
 }
-
 .dropdown-content a:hover {background-color: black;}
-
 .dropdown:hover .dropdown-content {display: block;}
